--- a/src/index.css
+++ b/src/index.css
@@ -135,7 +135,7 @@
 
 .result{
   width: 100%;
-  height: 100vh;
+  height: auto;
   font-family: 'Inter', sans-serif;
   background:#EBF3E8;
   display: flex;
@@ -155,6 +155,67 @@
   margin: 1rem;
 }
 
+.output{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.reference{
+  font-size: 2rem;
+  margin-left: 40px;
+  color: #86A789;
+}
+
+.cards{
+  display: flex;
+ justify-content: flex-start;
+
+  flex-wrap: wrap;
+}
+
+.card{
+  width: 400px;
+  height: fit-content;
+ margin: 10px 30px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  padding: 0 0 20px;
+  background-color: 
+  #D2E3C8;
+  
+}
+
+
+
+.green{
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  background-color: rgb(114, 255, 114);
+  border: none;
+  height: 10px;
+}
+
+.red{
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  background-color: rgb(255, 113, 113);
+  border: none;
+  height: 10px;
+}
+
+
+.blue{
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  background-color: rgb(114, 114, 255);
+  border: none;
+  height: 10px;
+}
 
 
 .title{
@@ -162,6 +223,16 @@
   font-weight: 400;
   color: #95c3a6;
   margin: 1rem;
+  padding: 0 10px;
+}
+
+.title-card{
+  margin: 20px 0;
+  color: #4c7c50;
+  font-size: 2.5rem;
+  font-weight: 400;
+  padding: 0 20px;
+ 
 }
 
 .sentiment{
@@ -172,14 +243,19 @@
   margin: 1rem;
 }
 
-.reference-card
 
-.references{
-  font-size: 18px;
+
+
+
+.references-card{
+  /* margin-top: 30px; */
+  font-size: 16px;
   font-weight: 400;
-  color: #95c3a6;
-  margin: 1rem;
+  color: #86A789;
+  padding: 0 20px;
 }
+
+
 
 .barchart{
   width: 40%;
